--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "money-lover",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "chart.js": "^2.8.0",
+    "npm": "^6.10.1"
+  }
 }
