--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ build-iPhoneSimulator/
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
-log/development.log
+/log/
 config/application.yml
 /node_modules/
 .byebug_history
