--- a/config/settings.yml
+++ b/config/settings.yml
@@ -21,3 +21,6 @@ status_income: "1"
 status_expense: "0"
 input_stats: "stats_year"
 min_year: 1800
+old_month_per_page: 5
+this_month_per_page: 10
+page_index: 1
