--- a/config/settings.yml
+++ b/config/settings.yml
@@ -20,8 +20,14 @@ zero: 0
 status_income: "1"
 status_expense: "0"
 input_stats: "stats_year"
+input_search: "search"
 min_year: 1800
 old_month_per_page: 5
 this_month_per_page: 10
 select_time_per_page: 10
 page_index: 1
+search1: "search1"
+search2: "search2"
+value_root: -1
+id_tool_cat: "tool_cat"
+id_modal: "modal"
